--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorWhite">#FFFFFF</color>
+    <color name="colorPrimary">#6b737e</color>
+    <color name="colorPrimaryDark">#2c3848</color>
+    <color name="colorAccent">#5b9ed2</color>
+    <color name="colorAccentDark">#8cbce0</color>
+    <color name="colorYellow">#ecd41b</color>
+    <color name="colorYellowDark">#6a6c28</color>
 </resources>
