--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -7,4 +7,6 @@
     <dimen name="sp32">32sp</dimen>
     <dimen name="sp16">16sp</dimen>
     <dimen name="sp14">14sp</dimen>
+    <dimen name="dp120">120dp</dimen>
+    <dimen name="dp160">160dp</dimen>
 </resources>
