--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -9,4 +9,5 @@
     <dimen name="sp14">14sp</dimen>
     <dimen name="dp120">120dp</dimen>
     <dimen name="dp160">160dp</dimen>
+    <dimen name="sp24">24sp</dimen>
 </resources>
